# sbmt-notify-svc

./: .dockerignore  .env.dev  .env.local  .env.prod  .gitignore  Dockerfile  LICENSE  Makefile  Readme.md  lambda.py  package-lock.json  pyproject.toml  requirements.txt  run.py  serverless.yaml
.devcontainer/: devcontainer.json
.github/workflows/: deploy_to_aws_lambda.yml  main.yml
app/: main.py
app/api/router/: router.py
app/api/v1/: router.py
app/services/: awslambda.py  awslambda_code.py  ses.py  sqs.py
app/templates/: base.html
app/templates/email_templates/: preview.html
archive/: main.yml
chalice_app/: app.py
chalice_app/.chalice/: config.json
tests/: test_example.py
